--- a/package.json
+++ b/package.json
@@ -27,14 +27,7 @@
     "report": "madrun report"
   },
   "dependencies": {
-    "@putout/babel": "^1.1.1",
-    "@putout/compare": "^13.0.0",
-    "@putout/operate": "^11.0.0",
-    "@putout/processor-json": "^7.0.0",
-    "fullstore": "^3.0.0",
-    "just-snake-case": "^3.2.0",
-    "parse-import-specifiers": "^1.0.1",
-    "rendy": "^4.0.0"
+    "ignore": "^5.2.4"
   },
   "keywords": [
     "putout",
