--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@putout/engine-runner": "^20.1.0",
+    "chalk": "^5.3.0",
     "ignore": "^5.2.4",
     "ora": "^7.0.1",
     "putout": "^34.0.0"
