--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@putout/engine-runner": "^20.1.0",
     "@putout/processor-filesystem": "^3.0.0",
     "chalk": "^5.3.0",
+    "fullstore": "^3.0.0",
     "ignore": "^5.2.4",
     "ora": "^7.0.1",
     "putout": "^34.0.0"
