--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@putout/engine-runner": "^20.1.0",
+    "@putout/formatter-codeframe": "^6.0.0",
     "@putout/processor-filesystem": "^3.0.0",
     "chalk": "^5.3.0",
     "fullstore": "^3.0.0",
