--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@putout/cli-choose": "^1.1.1",
     "@putout/engine-runner": "^20.1.0",
     "@putout/formatter-codeframe": "^6.0.0",
+    "@putout/formatter-dump": "^4.0.1",
     "@putout/processor-filesystem": "^3.0.0",
     "chalk": "^5.3.0",
     "fullstore": "^3.0.0",
