--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@putout/engine-runner": "^20.1.0",
     "@putout/formatter-codeframe": "^6.0.0",
     "@putout/formatter-dump": "^4.0.1",
+    "@putout/plugin-filesystem": "^3.6.0",
     "@putout/processor-filesystem": "^3.0.0",
     "chalk": "^5.3.0",
     "fullstore": "^3.0.0",
