feature: redlint: convert: add

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -18,6 +18,7 @@
         "**/run.js",
         "**/spinner.js",
         "**/menu.js",
+        "**/convert/index.js",
         "**/version.js"
     ],
     "branches": 100,
