--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@putout/plugin-filesystem": "^3.6.0",
     "@putout/processor-filesystem": "^3.0.0",
     "chalk": "^5.3.0",
+    "enquirer": "^2.4.1",
     "fullstore": "^3.0.0",
     "ignore": "^5.2.4",
     "ora": "^8.0.1",
     "putout": "^34.0.0",
-    "strip-ansi": "^7.1.0"
+    "strip-ansi": "^7.1.0",
+    "try-to-catch": "^3.0.1"
   },
   "keywords": [
     "putout",
