--- a/.nycrc.json
+++ b/.nycrc.json
@@ -6,6 +6,7 @@
         "**/fixture",
         "test",
         "**/debug.js",
+        "**/dialog.js",
         "**/coverage",
         "**/.*.*",
         "**/*.d.ts",
