feature: redlint: add bundle

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -19,6 +19,7 @@
         "**/run.js",
         "**/spinner.js",
         "**/menu.js",
+        "**/lint",
         "**/convert/index.js",
         "**/version.js"
     ],
