--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "generate"
   ],
   "devDependencies": {
+    "@putout/operator-filesystem": "^4.0.1",
     "@putout/test": "^9.0.0",
     "c8": "^9.1.0",
     "eslint": "^8.0.1",
