--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@putout/plugin-nodejs": "^11.0.0",
     "@putout/processor-filesystem": "^4.0.0",
     "chalk": "^5.3.0",
+    "ci-info": "^4.0.0",
     "enquirer": "^2.4.1",
     "fullstore": "^3.0.0",
     "ignore": "^5.2.4",
