--- a/.nycrc.json
+++ b/.nycrc.json
@@ -23,7 +23,8 @@
         "**/convert/index.js",
         "**/version.js",
         "**/example",
-        "**/bundle/bundle.js"
+        "**/bundle/bundle.js",
+        "**/*.config.*"
     ],
     "branches": 100,
     "lines": 100,
