--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@putout/formatter-dump": "^5.0.0",
     "@putout/operator-filesystem": "^4.0.1",
     "@putout/operator-json": "^2.0.0",
+    "@putout/plugin-eslint": "^8.10.1",
     "@putout/plugin-filesystem": "^5.0.0",
     "@putout/plugin-nodejs": "^11.0.0",
     "@putout/processor-filesystem": "^4.0.0",
