--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/putoutjs/redlint.git"
+    "url": "git+https://github.com/putoutjs/redlint.git"
   },
   "scripts": {
     "wisdom": "madrun wisdom",
