--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@putout/plugin-eslint": "^10.0.0",
     "@putout/plugin-filesystem": "^7.0.0",
     "@putout/plugin-nodejs": "^13.1.1",
+    "@putout/plugin-react": "^2.0.1",
     "@putout/processor-filesystem": "^5.0.0",
     "chalk": "^5.3.0",
     "ci-info": "^4.0.0",
