--- a/package.json
+++ b/package.json
@@ -63,10 +63,11 @@
     "generate"
   ],
   "devDependencies": {
+    "@putout/eslint-flat": "^2.0.0",
     "@putout/test": "^12.0.1",
     "c8": "^10.1.2",
     "eslint": "^9.0.0",
-    "eslint-plugin-putout": "^24.0.0",
+    "eslint-plugin-putout": "^25.0.1",
     "estree-to-babel": "^10.0.1",
     "just-kebab-case": "^4.2.0",
     "madrun": "^10.0.0",
