feature: redlint: iterator map ponyfill

--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
     "chalk": "^5.3.0",
     "ci-info": "^4.0.0",
     "enquirer": "^2.4.1",
+    "es-iterator-helpers": "^1.2.1",
     "fullstore": "^3.0.0",
     "ignore": "^7.0.0",
+    "obligator": "^3.0.0",
+    "obliterator": "^2.0.5",
     "ora": "^8.0.1",
     "putout": "^39.0.0",
     "strip-ansi": "^7.1.0",
