--- a/package.json
+++ b/package.json
@@ -75,8 +75,7 @@
     "madrun": "^11.0.0",
     "montag": "^1.0.0",
     "nodemon": "^3.0.1",
-    "supertape": "^11.0.4",
-    "try-catch": "^3.0.0"
+    "supertape": "^11.0.4"
   },
   "license": "MIT",
   "engines": {
