--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "exports": {
     ".": "./lib/redlint.js"
   },
+  "imports": {
+    "#edit": "./lib/edit/edit.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/putoutjs/redlint.git"
