--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     ".": "./lib/redlint.js"
   },
   "imports": {
-    "#edit": "./lib/edit/edit.js"
+    "#edit": "./lib/edit/edit.js",
+    "#test": "./test/create-test.js"
   },
   "repository": {
     "type": "git",
